--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ai": "^3.3.43",
     "jsdom": "^26.0.0",
     "next": "14.2.13",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.8"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
