--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "ai": "^3.3.43",
     "jsdom": "^26.0.0",
     "next": "14.2.13",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
+    "uuid": "^11.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
