--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/openai": "^0.0.61",
     "ai": "^3.3.43",
     "framer-motion": "^12.7.4",
+    "jsdom": "^26.1.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
